# litfetch

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  tests.yml
docs/: api.md  batch-resolution-plan.md  institutional-access.md  releasing.md  source-expansion-plan.md
docs/adr/: 0001-http-session-seam.md
docs/sources/: springer.md
docs/style/: python.md
litfetch/: __init__.py  _doi.py  _http.py  artifacts.py  crossref.py  fetchers.py  ids.py  relations.py  resolvers.py  semantic_scholar.py  serde.py  sessions.py  source_metadata.py  sources.py  unpaywall.py
tests/: conftest.py  test_doi.py  test_fetchers.py  test_http.py  test_relations.py  test_resolvers.py  test_serde.py  test_sessions.py  test_source_metadata.py  test_sources.py
