[project]
name = "litfetch"
version = "0.1.0"
description = "Identifier -> full-text markdown: a pluggable source ladder + identifier resolvers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toby Sargeant" }]
keywords = ["pubmed", "pmc", "full-text", "jats", "elsevier", "markdown"]
dependencies = [
  "httpx>=0.28",
  "litdown>=0.3",
]

[project.urls]
Repository = "https://github.com/populationgenomics/litfetch"
Issues = "https://github.com/populationgenomics/litfetch/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["litfetch*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
litfetch = ["py.typed"]

# litdown is not on PyPI; resolve it from GitHub for litfetch's own dev/CI only.
# uv.sources is ignored when building/publishing the wheel, so downstream
# consumers still see the abstract `litdown>=0.3` dependency and supply it from
# their own wheelhouse. Pinned to HEAD until litdown cuts a tagged release.
[tool.uv.sources]
litdown = { git = "https://github.com/populationgenomics/litdown.git", branch = "main" }

# Supply-chain age gate: never resolve a release younger than 7 days. Declared
# in-repo so CI and contributors inherit the same resolution.
[tool.uv]
exclude-newer = "7 days"

[dependency-groups]
test = ["pytest", "pytest-asyncio", "pytest-mock"]
lint = ["ruff", "pyright", "pytest", "pytest-asyncio", "pytest-mock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "W",
    "ANN", "ARG", "BLE", "COM", "DTZ", "ERA", "EXE", "ICN", "ISC",
    "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "T10", "TID", "UP", "YTT",
]

fixable = ["ALL"]

ignore = [
    "COM812",  # Trailing comma prohibited (conflicts with the formatter)
    # D1xx -- docstring *presence*. We enforce docstring format (D2/D3/D4) when
    # a docstring exists, but don't require one on every public symbol.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "Q000",    # Single quotes found but double quotes preferred
    "Q003",    # Change outer quotes (conflicts with single-quote formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]

[tool.pyright]
pythonVersion = "3.10"
include = ["litfetch", "tests"]
typeCheckingMode = "standard"
