[project]
name = "litfetch"
version = "0.2.0"
description = "Identifier -> the retrievable artifacts of a scholarly article: a pluggable source ladder + identifier resolvers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toby Sargeant" }]
keywords = ["pubmed", "pmc", "full-text", "jats", "elsevier", "supplementary"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Typing :: Typed",
]
dependencies = [
  "defusedxml>=0.7",
  "httpx>=0.28",
]

[project.optional-dependencies]
# bioRxiv/medRxiv preprint full text. Their JATS sits behind Cloudflare, so the
# fetch needs a browser-fingerprint client; `litfetch[biorxiv]` enables
# BiorxivFetcher (off the default ladder -- add it explicitly).
biorxiv = ["curl_cffi>=0.7"]

[project.urls]
Repository = "https://github.com/populationgenomics/litfetch"
Issues = "https://github.com/populationgenomics/litfetch/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["litfetch*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
litfetch = ["py.typed"]

# Supply-chain age gate: never resolve a release younger than 7 days. Declared
# in-repo so CI and contributors inherit the same resolution.
[tool.uv]
exclude-newer = "7 days"

# curl_cffi (the biorxiv extra) is in the dev groups so the BiorxivFetcher tests
# and type-checking have it; consumers opt in via the `biorxiv` extra.
[dependency-groups]
test = ["curl_cffi>=0.7", "pytest", "pytest-asyncio", "pytest-mock"]
# pre-commit is in the lint group because CI runs the whole static-check gate via
# `uv run pre-commit run --all-files`. pyright checks litfetch/ + tests/, so the
# group carries the test deps for those imports to resolve.
lint = ["curl_cffi>=0.7", "ruff", "pyright", "pre-commit", "pytest", "pytest-asyncio", "pytest-mock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "W",
    "ANN", "ARG", "BLE", "COM", "DTZ", "ERA", "EXE", "ICN", "ISC",
    "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "T10", "TID", "UP", "YTT",
]

fixable = ["ALL"]

ignore = [
    "COM812",  # Trailing comma prohibited (conflicts with the formatter)
    # D1xx -- docstring *presence*. We enforce docstring format (D2/D3/D4) when
    # a docstring exists, but don't require one on every public symbol.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "Q000",    # Single quotes found but double quotes preferred
    "Q003",    # Change outer quotes (conflicts with single-quote formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Complexity thresholds: roughly double the ruff defaults so the checks fire on
# genuinely sprawling code but not on everyday parsers and dispatchers.
[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 10
max-statements = 80
max-locals = 25

[tool.pyright]
pythonVersion = "3.10"
include = ["litfetch", "tests"]
typeCheckingMode = "standard"
